/put :: update user route added
