# src/user/user.controller.ts
@@ -1,6 +1,14 @@
-import { Body, Controller, Get, Post, ValidationPipe } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  Param,
+  Post,
+  Put,
+  ValidationPipe,
+} from '@nestjs/common';
 import { UserService } from './user.service';
-import { CreateUserDto } from 'src/dto/user.dto';
+import { CreateUserDto, UpdateUserDto } from 'src/dto/user.dto';
 import { UserDocument } from './schemas/user.schema';
 
 @Controller('user')
@@ -8,7 +16,18 @@ export class UserController {
   constructor(private readonly userService: UserService) {}
 
   @Post()
-  createUser(@Body(new ValidationPipe({ whitelist: true })) userData: CreateUserDto):Promise<UserDocument> {
+  createUser(
+    @Body(new ValidationPipe({ whitelist: true })) userData: CreateUserDto,
+  ): Promise<UserDocument> {
     return this.userService.createUser(userData);
+  }
+
+  @Put(':id')
+  updateUser(
+    @Param('id', new ValidationPipe({ whitelist: true })) id: string,
+    @Body(new ValidationPipe({ whitelist: true }))
+    updateUserData: UpdateUserDto,
+  ): Promise<UserDocument> {
+    return this.userService.updateUser(id, updateUserData);
   }
 }
